# semantic-release-python-template

./: .flake8  .gitignore  .releaserc.json  CHANGELOG.md  LICENSE  README.rst  package-lock.json  package.json  pyproject.toml
.github/: tests.yml
.github/actions/python-deps/: action.yml
.github/actions/tests/: action.yml
.github/workflows/: pr.yml  release.yml  tests.yml
semantic_release_python/: __init__.py
tests/: test_min.py
