[tool.poetry]
name = "semantic-release-python"
version = "1.1.2"
description = ""
authors = ["alekseik1 <1alekseik1@gmail.com>"]
readme = "README.rst"
packages = [{include = "semantic_release_python"}]

[tool.poetry.dependencies]
python = "^3.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
