[tool.poetry]
name = "semantic-release-python"
version = "1.4.0"
description = ""
authors = ["alekseik1 <1alekseik1@gmail.com>"]
readme = "README.rst"
license = "MIT"
packages = [{include = "semantic_release_python"}]

[tool.poetry.dependencies]
python = "^3.10"


[tool.poetry.group.dev.dependencies]
pytest = "^7.2.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
