[tool.poetry]
name = "semantic-release-python"
version = "1.4.0"
description = ""
authors = ["alekseik1 <1alekseik1@gmail.com>"]
readme = "README.rst"
license = "MIT"
packages = [{include = "semantic_release_python"}]

[tool.poetry.dependencies]
python = "^3.10"


[tool.poetry.group.dev.dependencies]
pytest = "^7.2.1"
hypothesis = "^6.62.1"
black = "^22.12.0"
isort = "^5.11.4"
docformatter = "^1.5.1"
flake8 = "^6.0.0"
flake8-docstrings = "^1.6.0"
flake8-builtins = "^2.1.0"
flake8-quotes = "^3.3.2"
pydocstyle = {version = "^6.2.3", extras = ["toml"]}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


# Formatters and linters
[tool.black]
line-length = 120

[tool.isort]
line_length = 120
profile = "black"

[tool.docformatter]
wrap-summaries = 119
wrap-description = 110
black = "true"

[tool.pytest.ini_options]
testpaths = [
    "tests",
]